change jar build location to something more sensible (APAMA_HOME from APAMA_WORK)

--- a/build.xml
+++ b/build.xml
@@ -52,8 +52,8 @@
 		</jar>
 	</target>
 	
-	<target name="copy" description="Build plugin and copy to APAMA_WORK/lib" depends="build">
-		<copy file="${output-jar}" todir="${env.APAMA_WORK}/lib/"/>
+	<target name="copy" description="Build plugin and copy to APAMA_HOME/lib" depends="build">
+		<copy file="${output-jar}" todir="${env.APAMA_HOME}/lib/"/>
 	</target>
 
 </project>
