--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
+<!-- 
 	Copyright © 2017 Software AG, Darmstadt, Germany and/or its licensors
   
 	Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
@@ -13,14 +13,17 @@
 		<javac includeantruntime="false" />
 	</presetdef>
 
+	
 	<property environment="env"/>
 	<property name="APAMA_HOME" location="${env.APAMA_HOME}"/>
 	<fail unless="env.APAMA_HOME" message="Please run the bin/apama_env script before attempting to build this sample."/>
 
 	<property name="output-dir" location="${user.dir}/build-output"/>
-	<property name="output-jar" location="${output-dir}/csv-codec.jar"/>
+	<property name="output-jar" location="${output-dir}/csv-codec-sample.jar"/>
 	<tstamp/>
 	
+	<import file="../FileTransport/build.xml" />
+
 	<path id="plugin-classpath">
 		<fileset dir="${APAMA_HOME}/lib">
 			<include name ="connectivity-plugins-api.jar"/>
@@ -30,12 +33,10 @@
 		<flattenmapper/>
 	</pathconvert>
 	
-	<target name="clean">
-		<delete dir="${output-dir}"/>
-	</target>
-
 	<!-- Targets for building -->
-	<target name="build" description="Build plugin" depends="clean">
+
+	<target name="build" description="Build plugin">
+		<delete dir="${output-dir}/work"/>
 		<mkdir dir="${output-dir}/work"/>
 		
 		<javac srcdir="${basedir}/src" destdir="${output-dir}/work" debug="true">
@@ -52,8 +53,11 @@
 		</jar>
 	</target>
 	
-	<target name="copy" description="Build plugin and copy to APAMA_HOME/lib" depends="build">
-		<copy file="${output-jar}" todir="${env.APAMA_HOME}/lib/"/>
+	<target name="copy" description="Build plugin and copy to APAMA_WORK/lib" depends="build, file-transport-copy">
+		<copy file="${output-jar}" todir="${env.APAMA_WORK}/lib/"/>
 	</target>
 
+	<target name="clean">
+		<delete dir="${output-dir}"/>
+	</target>
 </project>
