--- a/tests/system/CSVCodec_sys_001/Input/connectivity.yaml
+++ b/tests/system/CSVCodec_sys_001/Input/connectivity.yaml
@@ -1,11 +1,11 @@
 plugins:
   FileTransport:
     classpath:
-      - ${APAMA_HOME}/lib/file-transport-plugins.jar
+      - ${APAMA_WORK}/lib/file-transport-plugins.jar
     class: com.softwareag.samples.FileTransport
    
   CSVCodec:
-    classpath: ${APAMA_HOME}/lib/csv-codec.jar
+    classpath: ${APAMA_WORK}/lib/csv-codec-sample.jar
     class: com.softwareag.samples.CSVCodec
 
 
