--- a/tests/system/CSVCodec_sys_001/connectivity.yaml
+++ b/tests/system/CSVCodec_sys_001/connectivity.yaml
@@ -2,17 +2,17 @@ plugins:
   FileTransport:
     classpath:
       - ${APAMA_WORK}/lib/file-transport-plugins.jar
-    class: com.softwareag.samples.FileTransport
+    class: com.apama.samples.FileTransport
    
   CSVCodec:
     classpath: ${APAMA_WORK}/lib/csv-codec-sample.jar
-    class: com.softwareag.samples.CSVCodec
+    class: com.apama.samples.CSVCodec
 
 
 startChains:
   CSVChain:
     - apama.eventMap:
-        defaultEventType: com.softwareag.samples.Test
+        defaultEventType: com.apama.samples.Test
         # Capture events to this channel
         subscribeChannels:
           - data
